operator/src/desired/snapshots/balerix_operator__desired__fleet__tests__fleet_agents.snap
---
source: src/desired/fleet.rs
expression: plan.agents
---
- apiVersion: balerix.ai/v1alpha1
  kind: Agent
  metadata:
    finalizers:
      - balerix.ai/harvest
    labels:
      app.kubernetes.io/managed-by: balerix-operator
      balerix.ai/agent: alice
      balerix.ai/component: agent
      balerix.ai/crew: backend
      balerix.ai/daemon: default
      balerix.ai/fleet: payments
    name: payments-backend-alice
    namespace: team-a
    ownerReferences:
      - apiVersion: balerix.ai/v1alpha1
        controller: true
        kind: Fleet
        name: payments
        uid: fleet-uid
  spec:
    daemon: default
    fleet: payments
    crew: backend
    agent: alice
    repo: acme/payments-api
    ref: main
    git:
      auth: gh
      push: true
    settings:
      claude:
        args: []
        binary: claude
        resume: true
        settings:
          model: sonnet
          permissions:
            allow:
              - Bash(git *)
      env: {}
      plugins: {}
      runner:
        resources:
          requests:
            cpu: "1"
            memory: 2Gi
        storage:
          size: 40Gi
        type: pod
      sandbox: {}
      tools:
        node: 22.11.0
        python: 3.12.8
    specHash: e29a6a5240da2205ea9b01997e1d05fb2b2ceed66516ab5558425a96eed59cb6
- apiVersion: balerix.ai/v1alpha1
  kind: Agent
  metadata:
    finalizers:
      - balerix.ai/harvest
    labels:
      app.kubernetes.io/managed-by: balerix-operator
      balerix.ai/agent: bob
      balerix.ai/component: agent
      balerix.ai/crew: backend
      balerix.ai/daemon: default
      balerix.ai/fleet: payments
    name: payments-backend-bob
    namespace: team-a
    ownerReferences:
      - apiVersion: balerix.ai/v1alpha1
        controller: true
        kind: Fleet
        name: payments
        uid: fleet-uid
  spec:
    daemon: default
    fleet: payments
    crew: backend
    agent: bob
    repo: acme/payments-api
    ref: main
    git:
      auth: gh
      push: true
    settings:
      claude:
        args: []
        binary: claude
        resume: true
        settings:
          model: opus
          permissions:
            allow:
              - Bash(git *)
      env: {}
      plugins: {}
      runner:
        resources:
          requests:
            cpu: "1"
            memory: 2Gi
        storage:
          size: 40Gi
        type: pod
      sandbox: {}
      tools:
        node: 22.11.0
        python: 3.12.8
    specHash: bb2323cfb68e1f1efd508688c093fcb5ea0d6abe2a6069de21597873f5b7a914
